# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test_performance.cpp
Google_tests/: CMakeLists.txt  test_bishop_moves.cpp  test_chess_board.cpp  test_horse_moves.cpp  test_king_moves.cpp  test_moves.cpp  test_pawn_moves.cpp  test_runtime_performance.cpp  test_tower_moves.cpp  test_tree_search.cpp
Google_tests/lib/: .travis.yml
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h
Google_tests/lib/googletest/include/gtest/: gtest-matchers.h  gtest-spi.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-port.h
Google_tests/lib/googletest/samples/: sample3_unittest.cc  sample6_unittest.cc  sample7_unittest.cc
Google_tests/lib/googletest/scripts/: upload.py
Google_tests/lib/googletest/test/: googletest-filepath-test.cc  googletest-listener-test.cc  gtest_test_macro_stack_footprint_test.cc
common/: CMakeLists.txt
common/include/: Chess_board.hpp
common/source/: Chess_board.cpp
util/: CMakeLists.txt
util/include/: Board_state.hpp  Chess_board.hpp  Moves.hpp  Piece.hpp  Test_functions.hpp  Test_functions.tcc  Tree_search.hpp  Types.hpp
util/source/: Board_state.cpp  Chess_board.cpp  Moves.cpp  Piece.cpp  Test_functions.cpp  Tree_search.cpp  Types.cpp
